criacaco de nova classe e end-pont

--- a/.classpath
+++ b/.classpath
@@ -29,6 +29,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Luis Miguel/OneDrive/Documentos do Eclipse/api-filmes-spring-boot/javacsv2.1/javacsv.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Luis Miguel/OneDrive/Documentos do Eclipse/api-filmes-spring-boot/javacsv.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
