criacao de uma exceção personalizada e refatoração de classes

--- a/.classpath
+++ b/.classpath
@@ -46,7 +46,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Luis Miguel/Desktop/lombok.jar"/>
 	<classpathentry kind="lib" path="src/libs/javacsv.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Luis Miguel/OneDrive/Documentos do Eclipse/api-filmes-spring-boot/src/libs/lombok.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
