--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.devtools.livereload.enabled=true
+spring.boot.admin.client.url=http://localhost:8081
+management.endpoints.web.exposure.include=*
+management.endpoints.health.show-details=always
