--- a/pom.xml
+++ b/pom.xml
@@ -76,11 +76,11 @@
 			<artifactId>commons-csv</artifactId>
 			<version>1.8</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>de.codecentric</groupId>
 			<artifactId>spring-boot-admin-starter-client</artifactId>
 			<version>2.4.1</version>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 
 	<build>
