Mudando versão do Spring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.devtools.livereload.enabled=true
 spring.boot.admin.client.url=http://localhost:8081
 management.endpoints.web.exposure.include=*
 management.endpoints.health.show-details=always
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
